install(FILES
    arithmetic.h
    binary.h
    connection.h
    creation.h
    explog.h
    hyperbolic.h
    indexing.h
    linalg.h
    logic.h
    misc.h
    normalization.h
    pooling.h
    rnn.h
    rounding.h
    sorting.h
    statistics.h
    trigonometric.h
    DESTINATION include/chainerx/kernels
    )

add_library(chainerx_kernels STATIC
    arithmetic.cc
    binary.cc
    connection.cc
    creation.cc
    explog.cc
    hyperbolic.cc
    indexing.cc
    linalg.cc
    logic.cc
    misc.cc
    normalization.cc
    pooling.cc
    rounding.cc
    sorting.cc
    statistics.cc
    trigonometric.cc
    )
