install(FILES
    arithmetic.h
    binary.h
    connection.h
    creation.h
    explog.h
    hyperbolic.h
    indexing.h
    linalg.h
    logic.h
    misc.h
    normalization.h
    pooling.h
    rnn.h
    reduction.h
    rounding.h
    sorting.h
    statistics.h
    trigonometric.h
    DESTINATION include/chainerx/kernels
    )
